--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url('https://images.pexels.com/photos/6102004/pexels-photo-6102004.jpeg') !important;
+    background-image: url('https://images.pexels.com/photos/3015339/pexels-photo-3015339.jpeg') !important;
     background-size: cover !important;
     background-position: center;
     background-repeat: no-repeat;
@@ -29,7 +29,7 @@ form {
 form input, form button {
     padding: 0.5rem;
     font-size: 2rem;
-    border: 3px solid goldenrod !important;
+    border: 3px solid #333 !important;
     border-radius: 5px !important;
     background: #ffffffa8;
     color: #333 !important;
@@ -43,7 +43,7 @@ form button {
 }
 
 form button:hover {
-    background: goldenrod !important;
+    background: #333 !important;
     color: #fff;
 }
 
@@ -60,10 +60,10 @@ form button:hover {
 
 .todo {
     margin: 0.5rem;
-    background: #ffffff00;
-    color: black !important;
-    font-size: 1rem;
-    border: 3px solid goldenrod !important;
+    background: #20202067;
+    color: #FFF !important;
+    font-size: 2rem;
+    border: 3px solid #333 !important;
     border-radius: 5px !important;
     display: flex;
     justify-content: space-between;
@@ -72,7 +72,7 @@ form button:hover {
 }
 
 .golden {
-    color: goldenrod !important;
+    color: #333 !important;
 }
 
 .todo li {
@@ -80,8 +80,8 @@ form button:hover {
 }
 .trash-btn {
     color: #fff;
-    background: goldenrod !important;
-    border: goldenrod 2px solid;
+    background: #333 !important;
+    border: #333 2px solid;
     padding: 1rem;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -89,15 +89,15 @@ form button:hover {
 }
 
 .trash-btn:hover {
-    color: goldenrod !important;
+    color: #333 !important;
     background: #fff !important;
 }
 
 .complete-btn{
-    color: goldenrod;
+    color: #333;
     background: #fff;
-    border: goldenrod 2px solid;
-    border-left: solid goldenrod 3px !important;
+    border: #333 2px solid;
+    border-left: solid #333 3px !important;
     padding: 1rem;
     cursor: pointer;
     font-size: 1rem;
@@ -105,11 +105,11 @@ form button:hover {
 
 .complete-btn:hover {
     color: #fff !important;
-    background: goldenrod !important;
+    background: #333 !important;
 }
 
 .fa-square-plus{
-    color: goldenrod !important;
+    color: #333 !important;
 }
 
 .fa-square-plus:hover{
@@ -127,8 +127,8 @@ form button:hover {
 
 .completed{
     text-decoration: line-through;
-    opacity: 0.5;
-    color: green  !important;
+    opacity: 10;
+    color: grey  !important;
 }
 
 .fall{
@@ -141,7 +141,7 @@ select{
     -moz-appearance: none;
     outline: none;
     border: none;
-    color: goldenrod !important;
+    color: #333 !important;
 }
 
 .select {
@@ -151,10 +151,10 @@ select{
 }
 
 select {
-    color: goldenrod !important;
+    color: #333 !important;
     width: 10rem;
     cursor: pointer;
-    border: 3px solid goldenrod !important;
+    border: 3px solid #333 !important;
     border-radius: 5px;
     padding: 1rem;
 }
@@ -172,7 +172,7 @@ select {
 
 select:hover::after {
     background: #ffffff00;
-    color: goldenrod !important;
+    color: #333 !important;
 }
 
 p {
